--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
 
 dependencies:
+  qr_flutter: ^1.1.5
+  qr_reader: ^0.1.3
   flutter:
     sdk: flutter
 
