--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   qr_flutter: ^1.1.5
   qr_reader: ^0.1.3
   local_auth: ^0.3.0
+  flutter_sodium: ^0.0.8
+  http: ^0.12.0
+  hex: ^0.1.2
   flutter:
     sdk: flutter
 
