--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_sodium: ^0.0.8
   http: ^0.12.0
   hex: ^0.1.2
+  flutter_keychain: ^0.0.8
   flutter:
     sdk: flutter
 
