Page and dummy text for the terms and conditions

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   fluro: ^1.4.0
   after_layout: ^1.0.7
   intl: ^0.15.7
+  flutter_markdown: ^0.2.0
   flutter:
     sdk: flutter
 
@@ -45,6 +46,8 @@ flutter_icons:
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+    - assets/texts/terms_and_conditions.txt
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
