--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,13 +17,16 @@ dependencies:
   qr_reader: ^0.1.3
   local_auth: ^0.3.0
   flutter_sodium: ^0.0.8
-  http: ^0.12.0
   hex: ^0.1.2
   flutter_keychain: ^0.0.8
   fluro: ^1.4.0
   after_layout: ^1.0.7
   intl: ^0.15.7
   flutter_markdown: ^0.2.0
+  back_button_interceptor: ^2.0.0
+  dio: ^1.0.13
+  cookie_jar: ^0.0.7
+  path_provider: ^0.4.1
   flutter:
     sdk: flutter
 
