--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,1 +1,5 @@
 org.gradle.jvmargs=-Xmx1536M
+RELEASE_STORE_FILE=paytaca.keystore
+RELEASE_STORE_PASSWORD=
+RELEASE_KEY_ALIAS=paytacakey
+RELEASE_KEY_PASSWORD=
