--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: pitaka
-description: A new Flutter project.
+description: Paytaca mobile wallet app
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -13,9 +13,12 @@ environment:
   sdk: '>=2.0.0-dev.68.0 <3.0.0'
 
 dependencies:
-  qr_flutter: ^1.1.5
+  qr_flutter:
+    git:
+      url: git://github.com/lukef/qr.flutter.git
+      ref: 2.0.0-dev
   qr_reader: ^0.1.3
-  local_auth: ^0.3.0
+  local_auth: ^0.4.0+1
   flutter_sodium: ^0.0.8
   hex: ^0.1.2
   flutter_keychain: ^0.0.8
@@ -24,8 +27,7 @@ dependencies:
   intl: ^0.15.7
   flutter_markdown: ^0.2.0
   back_button_interceptor: ^2.0.0
-  dio: ^1.0.13
-  cookie_jar: ^0.0.7
+  dio: ^2.0.7
   path_provider: ^0.4.1
   swipedetector: ^1.2.0
   flutter:
