--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   path_provider: ^0.5.0+1
   shared_preferences: ^0.5.1+1
   swipedetector: ^1.2.0
+  crypto: ^2.0.6
   flutter:
     sdk: flutter
 
