Fixed issue in camera permission
Ref Issue #20

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   swipedetector: ^1.2.0
   crypto: ^2.0.6
   flutter_datetime_picker: ^1.1.6
+  permission_handler: ^3.0.0
   flutter:
     sdk: flutter
 
