- The button in Receive page hides if there's no selected account. - Global variable and global function is created under globals.dart for clean checking of connection status. - Added icon that indicates online and offline status.
Ref Issue #39

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_datetime_picker: ^1.1.6
   permission_handler: ^3.0.0
   sqflite: ^1.1.5
+  connectivity: ^0.4.3+1
   flutter:
     sdk: flutter
 
