--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sqflite: ^1.1.5
   connectivity: ^0.4.3+1
   flutter_secure_storage: ^3.2.1+1
+  archive: ^2.0.8
   flutter:
     sdk: flutter
 
