--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
   assets:
     - assets/icon/icon.png
     - assets/images/background1.png
+    - assets/images/loading.gif
     - assets/texts/terms_and_conditions.txt
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
