--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,14 @@ dependencies:
   flutter_datetime_picker: ^1.1.6
   permission_handler: ^3.0.0
   sqflite: ^1.1.5
-  connectivity: ^0.4.3+1
+  connectivity: ^0.4.3+5
   flutter_secure_storage: ^3.2.1+1
   archive: ^2.0.8
   passcode_screen:
   screen_state: ^0.1.1
+  http: ^0.12.0+2
+
+
 
   flutter:
     sdk: flutter
