--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   passcode_screen:
   screen_state: ^0.1.1
   http: ^0.12.0+2
-
+  device_id: ^0.2.0
+  uuid: ^2.0.2
 
 
   flutter:
