--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,7 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  qr_flutter:
-    git:
-      url: git://github.com/lukef/qr.flutter.git
-      ref: 2.0.0-dev
+  qr_flutter: ^3.0.1
   flutter_barcode_scanner: ^0.1.5+1
   local_auth: ^0.4.0+1
   flutter_sodium: ^0.0.9
