--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   screen_state: ^0.1.1
   http: ^0.12.0+2
   uuid: ^2.0.2
+  easy_dialog: ^1.0.5
 
   virtual_keyboard:
     path: ./virtual_keyboard-0.1.4-modified/
@@ -71,6 +72,7 @@ flutter:
     - assets/images/background1.png
     - assets/images/loading.gif
     - assets/texts/terms_and_conditions.txt
+    - assets/images/rsz_airplane_mode.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
