--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   uuid: ^2.0.2
   url_launcher: ^5.2.7
   flutter_udid: ^1.0.1
+  overlay_support: ^1.0.3
 
   easy_dialog:
     git:
