Added route for verifyIdentity page and also added scanbot library

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
     <uses-permission android:name="android.permission.CAMERA" />
     <application
+        android:largeHeap="true"
         android:name="io.flutter.app.FlutterApplication"
         android:label="Paytaca"
         android:icon="@mipmap/launcher_icon">
