--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,7 @@
 buildscript {
+    // Settings for scanbot
+    ext.kotlin_version = '1.3.41'
+    
     repositories {
         google()
         jcenter()
