--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_udid: ^1.0.1
   overlay_support: ^1.0.3
   scanbot_sdk: ^1.1.0
+  image_picker: ^0.6.2+2
 
   easy_dialog:
     git:
