--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_udid: ^1.0.1
   overlay_support: ^1.0.3
   image_picker: ^0.6.2+2
+  firebase_dynamic_links: ^0.5.0+8
 
   easy_dialog:
     git:
