--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   overlay_support: ^1.0.3
   image_picker: ^0.6.2+2
   firebase_dynamic_links: ^0.5.0+8
+  firebase_messaging: ^6.0.3
 
   easy_dialog:
     git:
