Added BLIP39 library for seed phrase and private & public keys creation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,11 @@ dependencies:
       url: git@github.com:paytaca/virtual_keyboard.git
       ref: master
 
+  bip39:
+    git:
+      url: git@github.com:paytaca/bip39.git
+      ref: master
+
   flutter:
     sdk: flutter
 
