--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,22 +18,24 @@ dependencies:
   local_auth: ^0.4.0+1
   flutter_sodium: ^0.0.9
   hex: ^0.1.2
-  fluro: ^1.4.0
+  fluro: ^1.6.3
   after_layout: ^1.0.7
   intl: ^0.15.7
   flutter_markdown: ^0.2.0
   flutter_masked_text: ^0.8.0
   back_button_interceptor: ^2.0.0
-  dio: ^2.0.7
-  dio_flutter_transformer: ^2.0.6
+  dio: ^3.0.10
+  dio_flutter_transformer: ^3.0.2
+  cookie_jar: ^1.0.0
+  dio_cookie_manager: ^1.0.0
   path_provider: ^0.5.0+1
   shared_preferences: ^0.5.1+1
   swipedetector: ^1.2.0
   crypto: ^2.0.6
-  flutter_datetime_picker: ^1.1.6
+  flutter_datetime_picker: ^1.4.0
   permission_handler: ^3.0.0
   sqflite: ^1.1.5
-  connectivity: ^0.4.3+5
+  connectivity: ^0.4.9+2
   flutter_secure_storage: ^3.2.1+1
   archive: ^2.0.8
   passcode_screen:
