Saving of BCH address and private key on device, sending address to server

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,11 @@ dependencies:
       url: git@github.com:paytaca/bip39.git
       ref: master
 
+  bitbox:
+    git:
+      url: git@github.com:paytaca/bitbox-flutter.git
+      ref: master
+
   flutter:
     sdk: flutter
 
